# cybershuttle-experiment-sdk

./: .gitignore  annotations.py  example.py  poc.ipynb  poc.py  pyproject.toml
cybershuttle/: __init__.py  auth.py  base.py  plan.py
cybershuttle/auth/: __init__.py
cybershuttle/md/: __init__.py  applications.py
demos/: poc.ipynb  poc.py
src/cybershuttle/: __init__.py  airavata.py  base.py  plan.py  runtime.py  sftp.py  task.py
src/cybershuttle/auth/: __init__.py  device_auth.py
src/cybershuttle/md/: applications.py
src/cybershuttle_experiment_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
