[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybershuttle-experiment-sdk"
version = "0.1.0"
description = "A SDK for Cybershuttle experiments"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests", "pydantic"]
